[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui.gd" id="1_ui"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_ui")

[node name="TimerLabel" type="Label" parent="."]
offset_left = 115
offset_top = 2
offset_right = 205
offset_bottom = 14
theme_override_font_sizes/font_size = 8
theme_override_colors/font_color = Color(0.0, 0.95, 1.0, 1)
horizontal_alignment = 1
text = "00:00.000"

[node name="HeightLabel" type="Label" parent="."]
offset_left = 240
offset_top = 2
offset_right = 318
offset_bottom = 14
theme_override_font_sizes/font_size = 8
theme_override_colors/font_color = Color(0.0, 0.95, 1.0, 1)
horizontal_alignment = 2
text = "0m"

[node name="BestTimeLabel" type="Label" parent="."]
offset_left = 2
offset_top = 2
offset_right = 140
offset_bottom = 14
theme_override_font_sizes/font_size = 7
theme_override_colors/font_color = Color(0.7, 0.4, 1.0, 1)
text = ""

[node name="RestartHint" type="Label" parent="."]
offset_left = 100
offset_top = 168
offset_right = 220
offset_bottom = 178
theme_override_font_sizes/font_size = 6
theme_override_colors/font_color = Color(0.5, 0.7, 1.0, 0.6)
horizontal_alignment = 1
text = "R restart | Esc menu"

[node name="BtnRestart" type="Button" parent="."]
offset_left = 272
offset_top = 162
offset_right = 318
offset_bottom = 178
flat = true
theme_override_font_sizes/font_size = 7
theme_override_colors/font_color = Color(0.0, 0.9, 1.0, 0.9)
text = "Retry"

[node name="BtnMenu" type="Button" parent="."]
offset_left = 2
offset_top = 162
offset_right = 42
offset_bottom = 178
flat = true
theme_override_font_sizes/font_size = 7
theme_override_colors/font_color = Color(0.0, 0.9, 1.0, 0.9)
text = "Menu"

[node name="PowerBarBg" type="ColorRect" parent="."]
visible = false
offset_left = 130
offset_top = 150
offset_right = 190
offset_bottom = 155
color = Color(0.08, 0.04, 0.18, 0.7)

[node name="PowerBarFill" type="ColorRect" parent="PowerBarBg"]
offset_left = 0
offset_top = 0
offset_right = 0
offset_bottom = 5
color = Color(0.0, 0.9, 1.0, 0.95)

[node name="GoalToast" type="Label" parent="."]
visible = false
offset_left = 60
offset_top = 40
offset_right = 260
offset_bottom = 58
theme_override_font_sizes/font_size = 11
theme_override_colors/font_color = Color(0.0, 1.0, 1.0, 1)
horizontal_alignment = 1
text = ""

[node name="FailPanel" type="PanelContainer" parent="."]
visible = false
offset_left = 60
offset_top = 35
offset_right = 260
offset_bottom = 145

[node name="VBox" type="VBoxContainer" parent="FailPanel"]
offset_left = 4
offset_top = 4
offset_right = 196
offset_bottom = 106
alignment = 1

[node name="FailTitle" type="Label" parent="FailPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 12
theme_override_colors/font_color = Color(1.0, 0.2, 0.6, 1)
horizontal_alignment = 1
text = "FELL!"

[node name="FailHeightLabel" type="Label" parent="FailPanel/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 8
horizontal_alignment = 1
text = "Reached: 0m"

[node name="Spacer" type="Control" parent="FailPanel/VBox"]
layout_mode = 2
custom_minimum_size = Vector2(0, 4)

[node name="HBox" type="HBoxContainer" parent="FailPanel/VBox"]
layout_mode = 2
alignment = 1

[node name="FailBtnRetry" type="Button" parent="FailPanel/VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(60, 16)
theme_override_font_sizes/font_size = 7
text = "Retry"

[node name="Spacer" type="Control" parent="FailPanel/VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(10, 0)

[node name="FailBtnMenu" type="Button" parent="FailPanel/VBox/HBox"]
layout_mode = 2
custom_minimum_size = Vector2(60, 16)
theme_override_font_sizes/font_size = 7
text = "Menu"
